@@ -4991,10 +4991,23 @@ Recent versions have (optional when built) OpenMP support.@footnote{This
 also needs the OpenMP runtime which has sometimes been distributed
 separately.}
 
-It is recommended to use C flag @option{-Wno-strict-prototypes} with
-@command{clang} 15.0.0 and later.  Builds without
-@option{--enable-R-shlib} have needed @code{CPICFLAGS}. @code{FPICFLAGS}
-and @code{CXXFICFLAGS} overridden as @samp{-fPIC}.
+There are problems mixing @command{clang} 15.0.0 built as default on
+Linux to produce PIE code and @command{gfortran} 11 or 12, which do not.
+One symptom is that @command{configure} does not detect @code{FC_LEN_T},
+which can be overcome by setting
+@example
+FPIEFLAGS=-fPIE
+@end example
+@noindent
+in @file{config.site}. This has sufficed for both default and
+shared-library builds.
+
+It is recommended to use C flag @option{-Wno-strict-prototypes}
+(disabling a C23 feature) if using @code{-pedantic} in @command{clang}
+15.0.0 and later, as @R{} is not yet optimized for C23.  For more detail
+see the release notes at
+@uref{https://releases.llvm.org/15.0.0/tools/clang/docs/ReleaseNotes.html#id9},
+under `improvements to diagnostics'..
 
 @c This was about 'Classic Flang'.  The newer version is not
 @c yet able to compile Fortran.
@@ -5262,6 +5275,7 @@ further flags are desirable in @file{config.site}:
 @example
 CFLAGS="-falign-functions=8 -g -O2"
 FFLAGS="-g -O2 -mmacosx-version-min=11.0"
+FCFLAGS="-g -O2 -mmacosx-version-min=11.0"
 @end example
 @noindent
 (the first flag in @code{CFLAGS} has been needed to inter-work with the
